Fixed chat box so there is a scroll bar when text overflows

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -18,6 +18,7 @@ div {
 	background-color: white;
 	border-style: dashed;
 	border-color: gray;
+	overflow: auto;
 }
 form {
 	background: #000;
@@ -34,12 +35,12 @@ form input {
 	border: 0;
 	padding: 10px;
 	width: 89%;
-	margin-right: 0.5%;
+	margin-right: 0.6%;
 }
 
 form button {
 	width: 8%;
-	background: rgb(130, 224, 255);
+	background: #f3f3f3;
 	border: none; 
 	padding: 10px; 
 }
